--- a/client/static/css/svgMap.css
+++ b/client/static/css/svgMap.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   position: absolute;
   background: black;
-  z-index: 9999;
+  z-index: 999;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,7 +78,7 @@ body {
 } */
 
 #svgMap {
-  z-index: 103;
+  z-index: 4;
   display: block;
   position: absolute;
   width: 100%;
@@ -189,17 +189,17 @@ body {
   stroke-linejoin: round;
   vector-effect: non-scaling-stroke;
   transition: fill .2s, stroke .2s;
-  z-index: 999;
+  z-index: 3;
 }
 
 .svgMap-map-wrapper .svgMap-country:hover, .svgMap-map-wrapper .svgMap-country.svgMap-active {
-  z-index: 999;
+  z-index: 2;
   stroke: #fff;
   stroke-width: 1px;
 }
 
 .svgMap-map-wrapper .svgMap-country.svgMap-active {
-  z-index: 999;
+  z-index: 2;
   stroke-width: 1.5;
 }
 
@@ -214,7 +214,7 @@ body {
   display: none;
   pointer-events: none;
   min-width: 60px;
-  z-index: 999;
+  z-index: 10;
 }
 
 .svgMap-tooltip.svgMap-tooltip-flipped {
@@ -309,7 +309,7 @@ body {
   overflow: hidden;
   height: 10px;
   width: 30px;
-  z-index: 999;
+  z-index: 5;
 }
 
 .svgMap-tooltip .svgMap-tooltip-pointer:after {
